--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="WebTech 道場" />
+    <meta
+      property="og:description"
+      content="WebTech 道場は、Web 技術に特化した学習をサポートするためのインタラクティブなトレーニングプラットフォームです。" />
+    <meta property="og:url" content="https://web-tech-dojo.benzen-games.com/" />
     <title>WebTech 道場</title>
   </head>
 
